Pascal/test/cohadar/pascal/errors/not_shared.pas
program test;
var a: boolean;
	
begin
	region a do begin end;
end.